Fixing alignment

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,6 @@ nav ul li h3 {
 }
 
 .wrapper {
-    display: flex;
     position: relative;
 }
 
